# xdg-ninja

./: .gitignore  LICENSE  Makefile  README.md  add-program.cabal  flake.nix  freesweep.json  xdg-ninja.cabal  xdg-ninja.sh  xdg-ninja.sh.orig  xdgnj.cabal
.github/workflows/: json_schema.yml  nix.yml  shellcheck.yml
app/: add-program.hs
generated_configs/: Apache Directory Studio.json  Berkshelf.json  Blender.json  Chromium.json  Composer.json  Dia.json  Dolphin emulator.json  Eclipse.json  Fetchmail.json  GNU Screen.json  GStreamer.json  Gajim.json  Godot Engine.json  GoldenDict.json  Google Earth.json  Houdini.json  Inkscape.json  Java OpenJDK.json  Java#OpenJDK.json  Jmol.json  Kakoune.json  LibreOffice.json  Minetest.json  Neovim.json  Nestopia UE.json  Octave.json  OfflineIMAP.json  PCManFM.json  Pry.json  Qt Designer.json  RSpec.json  RedNotebook.json  Remarkable.json  RuboCop.json  Ruby#RubyGems.json  SANE.json  SeaMonkey.json  Signal Desktop.json  Snap.json  Solfege.json  (+167 more)
haskell/: stack.yaml
haskell/lib/: EditProgram.hs
haskell/src/: xdgnj.hs
json-schema/: file.json  program.json
lib/: AddProgram.hs  Checks.hs  EditProgram.hs  Output.hs  PreviewProgram.hs  Program.hs  Prompts.hs
man/: xdg-ninja.1
programs/: Ammonite.json  DS_Store.json  FreeCAD.json  Hyprland.json  Networkmanager-openvpn.json  R.json  aMule.json  abcde.json  abook.json  ack.json  acme-sh.json  act.json  aegisub.json  aerospace.json  agda.json  alacritty.json  alpine.json  alsa.json  amule.json  android-studio.json  android.json  anki.json  ansible.json  anthy.json  antigen.json  antimicrox.json  anydesk.json  apache-beam.json  apache-directory-studio.json  aptitude.json  apvlv.json  arandr.json  arduino-cli.json  arduino.json  aria2.json  asdf-vm.json  ash.json  aspell.json  aspnet.json  asunder.json  (+619 more)
src/: add-program.hs  xdgnj.hs
