cabal-version:      2.4
name:               add-program
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             b3nj4m1n
maintainer:         b3nj4m1n@gmx.net

-- A copyright notice.
-- copyright:
-- category:

executable add-program
    main-is:          add-program.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        process ^>=1.6.13.2,
        text,
        aeson,
        bytestring,
        uuid,
        entropy,
        haskeline,
        text-ansi,
        extra,
        aeson-pretty,
    hs-source-dirs:   app
    default-language: Haskell2010

