cabal-version:      2.4
name:               add-program
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             b3nj4m1n
maintainer:         b3nj4m1n@gmx.net

-- A copyright notice.
-- copyright:
-- category:

executable add-program
    main-is:          add-program.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        process ^>=1.6.13.2,
        text ^>=1.2.5.0,
        aeson ^>=1.5.6.0,
        bytestring ^>=0.10.12.1,
        uuid ^>=1.3.15,
        entropy ^>=0.4.1.7,
        haskeline ^>=0.8.2,
        text-ansi ^>=0.1.1,
        extra ^>=1.7.10,
        aeson-pretty ^>=0.8.9,
    hs-source-dirs:   app
    default-language: Haskell2010

