cabal-version:      2.4
name:               xdg-ninja
version:            0.2.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             b3nj4m1n
maintainer:         b3nj4m1n@gmx.net

-- A copyright notice.
-- copyright:
-- category:

library
    build-depends:
        base ^>=4.15.1.0,
        process ^>=1.6.13.2,
        text ^>=1.2.5.0,
        aeson ^>=1.5.6.0,
        bytestring ^>=0.10.12.1,
        uuid ^>=1.3.15,
        entropy ^>=0.4.1.7,
        haskeline ^>=0.8.2,
        text-ansi ^>=0.1.1,
        extra ^>=1.7.10,
        aeson-pretty ^>=0.8.9,
        text-replace ^>=0.1,
        filepath ^>=1.4.2.2,
    hs-source-dirs:   lib
    default-language: Haskell2010
    exposed-modules: AddProgram, Program, Prompts, EditProgram, Output, PreviewProgram, Checks

executable add-program
    main-is:          add-program.hs
    build-depends:
        base ^>=4.15.1.0,
        text ^>=1.2.5.0,
        text-ansi ^>=0.1.1,
        xdg-ninja,
    hs-source-dirs:   src
    default-language: Haskell2010

executable xdgnj
    main-is:          xdgnj.hs
    build-depends:
        base ^>=4.15.1.0,
        optparse-applicative ^>=0.17.0.0,
        xdg-ninja,
    hs-source-dirs:   src
    default-language: Haskell2010

